unpackaged/main/default/objects/Contact/fields/Active_Member__c.field-meta.xml
<CustomField>
    <fullName>Active_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the contact an active gym member?</description>
    <label>Active Member</label>
    <type>Checkbox</type>
</CustomField>