unpackaged/main/default/objects/Contact/fields/Has_personal_trainer__c.field-meta.xml
<CustomField>
    <fullName>Has_personal_trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if they have a trainer</description>
    <label>Has personal trainer</label>
    <type>Checkbox</type>
</CustomField>