unpackaged/main/default/objects/Contact/fields/Is_Active_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the contact an active gym member?</description>
    <label>Is Active Member</label>
    <type>Checkbox</type>
</CustomField>