unpackaged/main/default/objects/Contact/fields/Opt_in_to_email_marketing__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_to_email_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate if user wishes to receive marketing content via email.</description>
    <label>Opt in to email marketing</label>
    <type>Checkbox</type>
</CustomField>